@@ -58,9 +58,19 @@ pthread_detach (pthread_t thread)
 
       __pthread_mutex_unlock (&pthread->state_lock);
 
+      /* Make sure the thread is not running before we remove its
+         stack.  (The only possibility is that it is in a call to
+         __pthread_thread_halt itself, but that is enough to cause a
+         sigsegv.)  */
+      __pthread_thread_halt (pthread);
+
+      /* Destroy the stack, the kernel resources and the control
+	 block.  */
       assert (pthread->stack);
       __pthread_stack_dealloc (pthread->stackaddr, pthread->stacksize);
       pthread->stack = 0;
+
+      __pthread_thread_dealloc (pthread);
 
       __pthread_dealloc (pthread);
       break;
